1.0.188
1. 升级为：JDK 17 的特性方法